# stonks

./: .pre-commit-config.yaml  LICENSE  main.py  pyproject.toml  utils.py
gui/: guiapp.py  mainwindow.py
utils/: env.py
xtbengine/: api.py  commands.py  wrapper.py  xAPIConnector.py
