[tool.poetry]
name = "stonks"
version = "0.1.0"
description = ""
authors = ["Mateusz Stankiewicz <mateusz@mateusz.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dearpygui = "^1.9.1"
structlog = "^23.1.0"
pydantic = { extras = ["dotenv"], version = "^1.10.7" }

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.276"
black = "^23.7.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
